--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Дискорд прикол</title>
 </head>
 <body>
-  <h1>Скопируй это и вставь в чат</h1>
+  <h1>Скопируй это Вставь в чат и нажми enter</h1>
   <p>‮Я хуисос и мою маму ибали миллион нигров‮</p>
 </body>
 </html>
