--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Дискорд прикол</title>
+
+  <!-- Превью для Discord -->
+  <meta property="og:title" content="Смотри что я нашёл 👀">
+  <meta property="og:description" content="Очень важная ссылка, обязательно открой">
+  <meta property="og:image" content="https://ТВОЙ_НИК.github.io/discord-preview/preview.jpg">
+  <meta property="og:url" content="https://ТВОЙ_НИК.github.io/discord-preview/">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!-- Редирект -->
+  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+
+  <title>Загрузка...</title>
 </head>
 <body>
-  <h1>Отлично а теперь Скопируй этот текст Вставь в чат и нажми enter</h1>
-  <p>‮Я хуисос и мою маму ибали миллион нигров‮</p>
 </body>
 </html>
