--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <!-- Превью для Discord -->
   <meta property="og:title" content="Смотри что я нашёл 👀">
   <meta property="og:description" content="Очень важная ссылка, обязательно открой">
-  <meta property="og:image" content="https://ТВОЙ_НИК.github.io/discord-preview/preview.jpg">
-  <meta property="og:url" content="https://ТВОЙ_НИК.github.io/discord-preview/">
+  <meta property="og:image" content="https://Gustav165.github.io/preview.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Редирект -->
