--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 
   <!-- Превью для Discord -->
-  <meta property="og:title" content="Смотри что я нашёл 👀">
-  <meta property="og:description" content="Очень важная ссылка, обязательно открой">
-  <meta property="og:image" content="https://Gustav165.github.io/preview.jpg">
+  <meta property="og:title" content="ВНИМАНИЕ">
+  <meta property="og:description" content="Очень важно Обязательно прочитай">
+  <meta property="og:image" content="https://github.com/Gustav165/Gustav165.github.io/blob/main/NEVER.png">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Редирект -->
