--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Превью для Discord -->
   <meta property="og:title" content="ВНИМАНИЕ">
   <meta property="og:description" content="Очень важно Обязательно прочитай">
-  <meta property="og:image" content="https://cdn.discordapp.com/attachments/1388589848192876679/1449469547525570610/NEVER.png?ex=693f0335&is=693db1b5&hm=6ebc10b29c467c4641594f28dd52f2bff6cf76856c07b4d67bf21a3ed2223671&">
+  <meta property="og:image" content="https://github.com/Gustav165/Gustav165.github.io/blob/main/NEVER.png?raw=true">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Редирект -->
