--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <meta property="og:image" content="https://github.com/Gustav165/Gustav165.github.io/blob/main/NEVER.png?raw=true">
   <meta name="twitter:card" content="summary_large_image">
 
-  <!-- Редирект -->
-  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ">
 
   <title>Загрузка...</title>
 </head>
 <body>
+  <!-- Картинка на главной странице -->
+  <img src="https://github.com/Gustav165/Gustav165.github.io/blob/main/NEVER.png?raw=true" 
+       style="max-width: 100%; height: auto; display: block; margin: 50px auto;">
 </body>
 </html>
