--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 <body>
   <!-- Картинка на главной странице -->
-  <img src="https://github.com/Gustav165/Gustav165.github.io/blob/main/NEVER.png?raw=true" 
-       style="max-width: 100%; height: auto; display: block; margin: 50px auto;">
+  <img src="NEVER.PNG">
 </body>
 </html>
