--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-
-  <!-- Превью для Discord -->
+  
+  <!-- Превью для Discord и других соцсетей -->
   <meta property="og:title" content="ВНИМАНИЕ">
-  <meta property="og:description" content="Очень важно Обязательно прочитай">
+  <meta property="og:description" content="Очень важно. Обязательно прочитай">
   <meta property="og:image" content="https://github.com/Gustav165/Gustav165.github.io/blob/main/NEVER.png?raw=true">
   <meta name="twitter:card" content="summary_large_image">
-
 
   <title>Загрузка...</title>
 </head>
 <body>
-  <!-- Картинка на главной странице -->
-  <img src="NEVER.PNG">
+  <!-- Картинка на главной странице, клик ведёт на сайт -->
+  <a href="https://gustav165.github.io" target="_blank">
+    <img src="https://github.com/Gustav165/Gustav165.github.io/blob/main/NEVER.png?raw=true" alt="Очень важно!" style="max-width:100%; height:auto;">
+  </a>
 </body>
 </html>
