--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   
   <!-- Превью для Discord и других соцсетей -->
-  <meta property="og:title" content="ВНИМАНИЕ">
-  <meta property="og:description" content="Очень важно. Обязательно прочитай">
+  <meta property="og:title" content="Моя крутая картинка">
+  <meta property="og:description" content="Описание картинки">
   <meta property="og:image" content="https://github.com/Gustav165/Gustav165.github.io/blob/main/NEVER.png?raw=true">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:url" content="https://gustav165.github.io/NEVER-page.html">
 
   <title>Загрузка...</title>
 </head>
