--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Моя крутая картинка">
   <meta property="og:description" content="Описание картинки">
   <meta property="og:image" content="https://github.com/Gustav165/Gustav165.github.io/blob/main/NEVER.png?raw=true">
-  <meta property="og:url" content="https://gustav165.github.io/NEVER-page.html">
+  <meta property="og:url" content="https://gustav165.github.io">
 
   <title>Загрузка...</title>
 </head>
