--- a/index.html
+++ b/index.html
@@ -4,17 +4,11 @@
   <meta charset="UTF-8">
   
   <!-- Превью для Discord и других соцсетей -->
-  <meta property="og:title" content="Моя крутая картинка">
-  <meta property="og:description" content="Описание картинки">
+  <meta property="og:title" content="НЕ НАЖИМАЙ">
+  <meta property="og:description" content="НИКОГДА НЕ НАЖИМАЙ">
   <meta property="og:image" content="https://github.com/Gustav165/Gustav165.github.io/blob/main/NEVER.png?raw=true">
   <meta property="og:url" content="https://gustav165.github.io">
-
+  <meta http-equiv="refresh" content="0;url=https://youtu.be/dQw4w9WgXcQ">
   <title>Загрузка...</title>
 </head>
-<body>
-  <!-- Картинка на главной странице, клик ведёт на сайт -->
-  <a href="https://gustav165.github.io" target="_blank">
-    <img src="https://github.com/Gustav165/Gustav165.github.io/blob/main/NEVER.png?raw=true" alt="Очень важно!" style="max-width:100%; height:auto;">
-  </a>
-</body>
 </html>
