--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Превью для Discord и других соцсетей -->
   <meta property="og:title" content="НЕ НАЖИМАЙ">
   <meta property="og:description" content="НИКОГДА НЕ НАЖИМАЙ">
-  <meta property="og:image" content="https://github.com/Gustav165/Gustav165.github.io/blob/main/NEVER.png?raw=true">
+  <meta property="og:image" content="https://github.com/Gustav165/Gustav165.github.io/blob/main/Lmao.png?raw=true">
   <meta property="og:url" content="https://gustav165.github.io">
   <meta http-equiv="refresh" content="0;url=https://youtu.be/dQw4w9WgXcQ">
   <title>Загрузка...</title>
