--- a/index.html
+++ b/index.html
@@ -2,13 +2,34 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  
+
   <!-- Превью для Discord и других соцсетей -->
   <meta property="og:title" content="НЕ НАЖИМАЙ">
   <meta property="og:description" content="НИКОГДА НЕ НАЖИМАЙ">
   <meta property="og:image" content="https://github.com/Gustav165/Gustav165.github.io/blob/main/Lmao.png?raw=true">
   <meta property="og:url" content="https://gustav165.github.io">
-  <meta http-equiv="refresh" content="0;url=https://youtu.be/dQw4w9WgXcQ">
+
   <title>Загрузка...</title>
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EPQVCTGF0V"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-EPQVCTGF0V');
+  </script>
+
+  <script>
+    // Минимальная задержка для регистрации визита
+    window.addEventListener('DOMContentLoaded', () => {
+      setTimeout(() => {
+        window.location.href = "https://youtu.be/dQw4w9WgXcQ";
+      }, 200); // 0.2 секунды
+    });
+  </script>
 </head>
+<body>
+  <!-- Можно оставить текст или пусто, пользователь почти не заметит -->
+</body>
 </html>
