--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     // Минимальная задержка для регистрации визита
     window.addEventListener('DOMContentLoaded', () => {
       setTimeout(() => {
-        window.location.href = "https://youtu.be/dQw4w9WgXcQ";
-      }, 200); // 0.2 секунды
+        window.location.href = "https://www.youtube.com/watch?v=j-iheFkstFQ";
+      }, 500); // 0.2 секунды
     });
   </script>
 </head>
